--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octokit/rest": "^19.0.7",
     "axios": "^1.3.4",
     "curl": "^0.1.4",
     "github-api": "^3.4.0",
